# substrate

./: .gitignore  Cargo.toml  r
client/api/src/: backend.rs  in_mem.rs
client/basic-authorship/src/: basic_authorship.rs
client/beefy/src/: tests.rs  worker.rs
client/block-builder/: Cargo.toml
client/block-builder/src/: lib.rs
client/db/src/: lib.rs
client/finality-grandpa/src/: finality_proof.rs  tests.rs  warp_proof.rs
client/genesis-builder/: Cargo.toml  README.md
client/genesis-builder/src/: lib.rs
client/network/bitswap/: Cargo.toml
client/offchain/src/: lib.rs
client/rpc-spec-v2/: Cargo.toml
client/rpc-spec-v2/src/: lib.rs
client/service/src/: lib.rs
client/transaction-pool/benches/: basics.rs
client/transaction-pool/src/: lib.rs  tests.rs
client/transaction-pool/tests/: pool.rs
frame/alliance/src/: lib.rs  mock.rs
frame/assets/src/: lib.rs  mock.rs
frame/aura/src/: mock.rs
frame/authority-discovery/src/: lib.rs
frame/babe/src/: lib.rs  mock.rs
frame/balances/src/: lib.rs
frame/beefy-mmr/src/: mock.rs
frame/support/: Cargo.toml
frame/system/: Cargo.toml
primitives/application-crypto/: Cargo.toml
primitives/arithmetic/: Cargo.toml
primitives/core/: Cargo.toml
primitives/io/: Cargo.toml
primitives/merkle-mountain-range/: Cargo.toml
primitives/npos-elections/: Cargo.toml
primitives/runtime/: Cargo.toml
primitives/test-primitives/: Cargo.toml
primitives/trie/: Cargo.toml
primitives/version/: Cargo.toml
primitives/weights/: Cargo.toml
test-utils/client/: Cargo.toml
test-utils/runtime/: Cargo.toml
(+85 files in other folders)
