[package]
name = "sc-genesis-builder"
version = "0.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate genesis config builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# [dependencies]
# codec = { package = "parity-scale-codec", version = "3.2.2", features = [
# 	"derive",
# ] }
# sc-client-api = { version = "4.0.0-dev", path = "../api" }
# sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
# sp-core = { version = "7.0.0", path = "../../primitives/core" }
# sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
#
# [dev-dependencies]
# sp-state-machine = { version = "0.13.0", path = "../../primitives/state-machine" }
# substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }


[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
